--- a/site/pages/MillShop.html
+++ b/site/pages/MillShop.html
@@ -12,10 +12,17 @@
 </head>
 <body>
 
-<h1>Welcome to Mill Shop!</h1>
-<form>
-    <button id="clickme">Click Me!</button>
-</form>
+<div id="main-block">
+    <div id="menu-block">This is menu...</div>
+    <h1>Welcome to Mill Shop!</h1>
+    <form>
+        <button id="clickme">Click Me!</button>
+    </form>
+    <div id="footer-block">
+        <img src="../resources/images/logo_vertical.svg" height="20%" width="20%">
+        This is footer...
+    </div>
+</div>
 
 </body>
 </html>
