--- a/site/pages/footer.html
+++ b/site/pages/footer.html
@@ -3,7 +3,7 @@
     CREATED BY NIKITA GRECHUKHIN, NIKOLAY KOMAROV AND VAGIK SIMONYAN
  -->
 
-<div id="footer-bar">
-    <img src="../resources/images/logo_bw.svg" width="50%" height="50%">
+    <div id="footer-logo">
+        <img src="../resources/images/logo_bw.svg">
+    </div>
     <p>This is footer loaded from file!</p>
-</div>
