--- a/site/pages/menu.html
+++ b/site/pages/menu.html
@@ -4,13 +4,27 @@
  -->
 
 <div id="logo-block">
-    <img src="../resources/images/logo_vertical.svg" height="20%" width="20%">
+    <img src="../resources/images/logo_vertical.svg">
 </div>
-<div id="menu-bar">
-    <a href="MillShop.php">Men</a>
-    <a href="MillShop.php">Women</a>
-    <a href="MillShop.php">Kids</a>
-    <a href="MillShop.php"><img src="../resources/images/search.svg" id="search-button" width="10%" height="10%"></a>
+<div id="menu-bar-outside">
+    <div id="menu-bar-inside">
+        <div id="menu-bar-links">
+            <div class="menu-links-item"><a href="MillShop.php">Men</a></div>
+            <div class="menu-links-item"><a href="MillShop.php" class="menu-links-item">Women</a></div>
+            <div class="menu-links-item"><a href="MillShop.php" class="menu-links-item">Kids</a></div>
+        </div>
+        <div id="menu-bar-tools">
+            <div id="menu-bar-search">
+                <a href="MillShop.php"><img src="../resources/images/search.svg"></a>
+            </div>
+            <div id="menu-bar-currency">
+                <a href="MillShop.php"><img src="../resources/images/currency.svg"></a>
+            </div>
+            <div id="menu-bar-bag">
+                <a href="MillShop.php"><img src="../resources/images/bag.svg"></a>
+            </div>
+        </div>
+    </div>
 </div>
 
 
