--- a/site/pages/footer.html
+++ b/site/pages/footer.html
@@ -3,7 +3,11 @@
     CREATED BY NIKITA GRECHUKHIN, NIKOLAY KOMAROV AND VAGIK SIMONYAN
  -->
 
+<div id="footer-inside">
     <div id="footer-logo">
-        <img src="../resources/images/logo_bw.svg">
+        <img src="../resources/images/logo_white.svg">
     </div>
-    <p>This is footer loaded from file!</p>
+    <div id="footer-contacts">
+        <p>&copy; Mill Shop Company, 2016</p>
+    </div>
+</div>
