add kids, men, women

--- a/site/pages/menu.html
+++ b/site/pages/menu.html
@@ -4,14 +4,14 @@
  -->
 
 <div id="logo-block">
-    <img src="../resources/images/logo_vertical.svg">
+    <a href="MillShop.php"><img src="../resources/images/logo_vertical.svg"></a>
 </div>
 <div id="menu-bar-outside">
     <div id="menu-bar-inside">
         <div id="menu-bar-links">
-            <div class="menu-links-item"><a href="MillShop.php">Men</a></div>
-            <div class="menu-links-item"><a href="MillShop.php" class="menu-links-item">Women</a></div>
-            <div class="menu-links-item"><a href="MillShop.php" class="menu-links-item">Kids</a></div>
+            <div class="menu-links-item"><a href="Men.php">Men</a></div>
+            <div class="menu-links-item"><a href="Women.php" class="menu-links-item">Women</a></div>
+            <div class="menu-links-item"><a href="Kids.php" class="menu-links-item">Kids</a></div>
         </div>
         <div id="menu-bar-tools">
             <div id="menu-bar-search">
