Added base flexibility of the pages

--- a/site/pages/menu.html
+++ b/site/pages/menu.html
@@ -8,6 +8,7 @@
 </div>
 <div id="menu-bar-outside">
     <div id="menu-bar-inside">
+        <div class="margin-wrapper">
         <div id="menu-bar-links">
             <div class="menu-links-item"><a href="Men.php">Men</a></div>
             <div class="menu-links-item"><a href="Women.php" class="menu-links-item">Women</a></div>
@@ -23,6 +24,7 @@
             <div id="menu-bar-bag">
                 <a href="MillShop.php"><img src="../resources/images/bag.svg"></a>
             </div>
+        </div>
         </div>
     </div>
 </div>
