Design of search form

--- a/site/pages/menu.html
+++ b/site/pages/menu.html
@@ -16,7 +16,13 @@
         </div>
         <div id="menu-bar-tools">
             <div id="menu-bar-search">
-                <a href="MillShop.php"><img src="../resources/images/search.svg"></a>
+
+                <form id="search-form" class="search-form">
+                    <input type="text" class="search-textbox" placeholder="I'm looking for..." name="search" value="" autocomplete="off">
+                    <input type="submit" class="search-button" value="">
+                    <span class="search-icon"></span>
+                </form>
+
             </div>
             <div id="menu-bar-currency">
                 <a href="MillShop.php"><img src="../resources/images/currency.svg"></a>
