--- a/site/pages/footer.html
+++ b/site/pages/footer.html
@@ -10,4 +10,5 @@
     <div id="footer-contacts">
         <p>&copy; Mill Shop Company, 2016</p>
     </div>
+    <a href="Feedback.php" style = "color:#ffffff;" ><div id="feedback">Feedback</div></a>
 </div>
