Fixing main page and footer

--- a/site/pages/footer.html
+++ b/site/pages/footer.html
@@ -8,7 +8,7 @@
         <img src="../resources/images/logo_white.svg">
     </div>
     <div id="footer-contacts">
-        <p>&copy; Mill Shop Company, 2016</p>
+        <div id="footer-copyright">&copy; Mill Shop Company, 2016</div>
+        <a href="Feedback.php" style = "color:#ffffff;" ><div id="footer-feedback">Feedback</div></a>
     </div>
-    <a href="Feedback.php" style = "color:#ffffff;" ><div id="feedback">Feedback</div></a>
 </div>
