Optimization of the pages

--- a/site/pages/footer.html
+++ b/site/pages/footer.html
@@ -3,12 +3,24 @@
     CREATED BY NIKITA GRECHUKHIN, NIKOLAY KOMAROV AND VAGIK SIMONYAN
  -->
 
-<div id="footer-inside">
-    <div id="footer-logo">
-        <img src="../resources/images/logo_white.svg">
+<!--
+<div id="main-block">
+    <div class="margin-wrapper"> -->
     </div>
-    <div id="footer-contacts">
-        <div id="footer-copyright">&copy; Mill Shop Company, 2016</div>
-        <a href="Feedback.php" style = "color:#ffffff;" ><div id="footer-feedback">Feedback</div></a>
+</div>
+
+<!--
+<div id="wrapping-block"> -->
+</div>
+
+<div id="footer-block">
+    <div id="footer-inside">
+        <div id="footer-logo">
+            <img src="../resources/images/logo_white.svg">
+        </div>
+        <div id="footer-contacts">
+            <div id="footer-copyright">&copy; Mill Shop Company, 2016</div>
+            <a href="Feedback.php" style = "color:#ffffff;" ><div id="footer-feedback">Feedback</div></a>
+        </div>
     </div>
 </div>
