--- a/site/pages/menu.html
+++ b/site/pages/menu.html
@@ -5,7 +5,7 @@
 <div id="wrapping-block">
 <div id="menu-block">
     <div id="logo-block">
-        <a href="MillShop.php"><img src="../resources/images/logo_horizontal.svg"></a>
+        <a href="MillShop.php"><div id="logo-image"></div></a>
     </div>
     <div id="menu-bar-outside">
         <div id="menu-bar-inside">
