--- a/site/pages/menu.html
+++ b/site/pages/menu.html
@@ -10,27 +10,26 @@
     <div id="menu-bar-outside">
         <div id="menu-bar-inside">
             <div class="margin-wrapper">
-            <div id="menu-bar-links">
-                <div class="menu-links-item"><a href="Men.php">Men</a></div>
-                <div class="menu-links-item"><a href="Women.php" class="menu-links-item">Women</a></div>
-                <div class="menu-links-item"><a href="Kids.php" class="menu-links-item">Kids</a></div>
-            </div>
-            <div id="menu-bar-tools">
-                <div id="menu-bar-search">
-                    <form id="search-form" class="search-form">
-                        <input type="text" class="search-textbox" placeholder="I'm looking for..." name="search" value="" autocomplete="off">
-                        <input type="submit" class="search-button" value="">
-                        <span class="search-icon"></span>
-                    </form>
-
+                <div id="menu-bar-links">
+                    <div class="menu-links-item"><a href="Men.php">Men</a></div>
+                    <div class="menu-links-item"><a href="Women.php" class="menu-links-item">Women</a></div>
+                    <div class="menu-links-item"><a href="Kids.php" class="menu-links-item">Kids</a></div>
                 </div>
-                <div id="menu-bar-currency">
-                    <a href="MillShop.php"><img src="../resources/images/currency.svg"></a>
+                <div id="menu-bar-tools">
+                    <div id="menu-bar-search">
+                        <form id="search-form" class="search-form">
+                            <input type="text" class="search-textbox" placeholder="I'm looking for..." name="search" value="" autocomplete="off">
+                            <input type="submit" class="search-button" value="">
+                            <span class="search-icon"></span>
+                        </form>
+                    </div>
+                    <a href="MillShop.php" style="text-decoration: none">
+                        <div id="menu-bar-currency"></div>
+                    </a>
+                    <a href="MillShop.php">
+                        <div id="menu-bar-bag"><div id="menu-bag-items-count">0</div></div>
+                    </a>
                 </div>
-                <div id="menu-bar-bag">
-                    <a href="MillShop.php"><img src="../resources/images/bag.svg"></a>
-                </div>
-            </div>
             </div>
         </div>
     </div>
