--- a/site/pages/menu.html
+++ b/site/pages/menu.html
@@ -17,17 +17,17 @@
                 </div>
                 <div id="menu-bar-tools">
                     <div id="menu-bar-search">
-                        <form id="search-form" class="search-form">
+                        <form id="search-form" class="search-form" title="Search">
                             <input type="text" class="search-textbox" placeholder="I'm looking for..." name="search" value="" autocomplete="off">
                             <input type="submit" class="search-button" value="">
                             <span class="search-icon"></span>
                         </form>
                     </div>
                     <a href="MillShop.php" style="text-decoration: none">
-                        <div id="menu-bar-currency"></div>
+                        <div id="menu-bar-currency" title="Currency"></div>
                     </a>
                     <a href="MillShop.php">
-                        <div id="menu-bar-bag"><div id="menu-bag-items-count">0</div></div>
+                        <div id="menu-bar-bag" title="Your bag"><div id="menu-bag-items-count">0</div></div>
                     </a>
                 </div>
             </div>
