add loging page

--- a/site/pages/footer.html
+++ b/site/pages/footer.html
@@ -18,9 +18,7 @@
         <div id="footer-logo">
             <img src="../resources/images/logo_white.svg">
         </div>
-        <div id="footer-contacts">
-            <div id="footer-copyright">&copy; Mill Shop Company, 2016</div>
-            <a href="Feedback.php" style = "color:#ffffff;" ><div id="footer-feedback">Feedback</div></a>
-        </div>
+            <div id="footer-contacts">&copy; Mill Shop Company, 2016</div>
+            <a href="Feedback.php" style = "..." ><div id="footer-feedback">Feedback</div></a>
     </div>
 </div>
