--- a/site/pages/menu.html
+++ b/site/pages/menu.html
@@ -25,7 +25,7 @@
 
                 </div>
                 <div id="menu-bar-currency">
-                    <a href="MillShop.php"><img src="../resources/images/currency.svg"></a>
+                    <a href="login.php"><img src="../resources/images/currency.svg"></a>
                 </div>
                 <div id="menu-bar-bag">
                     <a href="MillShop.php"><img src="../resources/images/bag.svg"></a>
