--- a/site/pages/menu.html
+++ b/site/pages/menu.html
@@ -15,10 +15,6 @@
                     <div class="menu-links-item"><a href="Women.php" class="menu-links-item">Women</a></div>
                     <div class="menu-links-item"><a href="Kids.php" class="menu-links-item">Kids</a></div>
                 </div>
-             <!--
-                <div id="menu-bar-currency">
-                    <a href="login.php"><img src="../resources/images/currency.svg"></a>
-                    -->
                 <div id="menu-bar-tools">
                     <div id="menu-bar-search">
                         <form id="search-form" class="search-form" title="Search">
@@ -27,8 +23,11 @@
                             <span class="search-icon"></span>
                         </form>
                     </div>
-                    <a href="login.php" style="text-decoration: none">
+                    <a href="MillShop.php" style="text-decoration: none">
                         <div id="menu-bar-currency" title="Currency"></div>
+                    </a>
+                    <a href="login.php" style="text-decoration: none">
+                        <div id="menu-bar-user" title="My profile"></div>
                     </a>
                     <a href="MillShop.php">
                         <div id="menu-bar-bag" title="Your bag"><div id="menu-bag-items-count">0</div></div>
