add discount and getting string from search textbox

--- a/site/pages/menu.html
+++ b/site/pages/menu.html
@@ -17,7 +17,7 @@
                 </div>
                 <div id="menu-bar-tools">
                     <div id="menu-bar-search">
-                        <form id="search-form" class="search-form" title="Search">
+                        <form id="search-form" class="search-form" title="Search" method="get">
                             <input type="text" class="search-textbox" placeholder="I'm looking for..." name="search" value="" autocomplete="off">
                             <input type="submit" class="search-button" value="">
                             <span class="search-icon"></span>
