Optimization and adding copyright header into files

--- a/site/pages/footer.html
+++ b/site/pages/footer.html
@@ -19,6 +19,6 @@
             <img src="../resources/images/logo_white.svg">
         </div>
             <div id="footer-contacts">&copy; Mill Shop Company, 2016</div>
-            <a href="Feedback.php"><div id="footer-feedback">Feedback</div></a>
+        <div id="footer-feedback"><a href="Feedback.php">Feedback</a></div>
     </div>
 </div>
