Configuring of criteria

--- a/site/pages/footer.html
+++ b/site/pages/footer.html
@@ -15,10 +15,12 @@
 
 <div id="footer-block">
     <div id="footer-inside">
-        <div id="footer-logo">
-            <img src="../resources/images/logo_white.svg">
+        <div class="margin-wrapper">
+            <div id="footer-logo">
+                <img src="../resources/images/logo_white.svg">
+            </div>
+                <div id="footer-contacts">&copy; Mill Shop Company, 2016</div>
+            <div id="footer-feedback"><a href="Feedback.php">Feedback</a></div>
         </div>
-            <div id="footer-contacts">&copy; Mill Shop Company, 2016</div>
-        <div id="footer-feedback"><a href="Feedback.php">Feedback</a></div>
     </div>
 </div>
