Added function for subcategory criterion; styling elements; fixing bug

--- a/site/pages/footer.html
+++ b/site/pages/footer.html
@@ -20,7 +20,11 @@
                 <img src="../resources/images/logo_white.svg">
             </div>
                 <div id="footer-contacts">&copy; Mill Shop Company, 2016</div>
-            <div id="footer-feedback"><a href="Feedback.php">Feedback</a></div>
+            <div id="footer-feedback">
+                <a href="Feedback.php">
+                    <!--<button value="Contact Us" class="contact-us-button simple-button ">-->Contact Us<!--</button>-->
+                </a>
+            </div>
         </div>
     </div>
 </div>
