--- a/site/pages/footer.html
+++ b/site/pages/footer.html
@@ -19,12 +19,10 @@
             <div id="footer-logo">
                 <img src="../resources/images/logo_white.svg">
             </div>
-                <div id="footer-contacts">&copy; Mill Shop Company, 2016</div>
             <div id="footer-feedback">
-                <a href="Feedback.php">
-                    <!--<button value="Contact Us" class="contact-us-button simple-button ">-->Contact Us<!--</button>-->
-                </a>
+                <a href="Feedback.php">Contact Us</a>
             </div>
         </div>
+        <div id="footer-contacts">&copy; Mill Shop Company, 2016</div>
     </div>
 </div>
